# gcp-permission-mappings

./: LICENSE  README.md  mappings.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS
gcp_permission_mappings/: __init__.py  gcp_permission.py  gcp_permission_set.py  util.py
gcp_permission_mappings/resources/: allowable_permissions.json  deniable_permissions.json  non_standard_mappings.json
